--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "gh-pages": "^6.3.0",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.3",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-toggle-dark-mode": "^1.1.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
