--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-toggle-dark-mode": "^1.1.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "tech-stack-icons": "^3.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
