--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -25,10 +25,45 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: npm ci -f
-      - run: npm run build --if-present
+          
+      
+      - run: |
+          npm ci -f
+          ls
+          tree ../
+          npm run build --if-present
+        
       - uses: peaceiris/actions-gh-pages@v4
         if: github.event_name == 'push'
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          
+        
+      
+            
+      - name: Check the other repo
+        uses: actions/checkout@v4
+        with:
+          repository: Jounaidayoub/jounaidayoub.github.io
+          path: secondary-repo
+          token: ${{ secrets.PAT }}
+
+      - run: |
+          rm -rf ./*
+          pwd
+          ls ../
+          ls
+          
+          cp -r ../dist/* .
+        working-directory: ./secondary-repo
+      - name: Commit files
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          echo "ayoub.is-a.dev" > CNAME
+          git add .
+          git commit -m "${{ github.event.head_commit.message }}"
+
+          git push origin main
+        working-directory: ./secondary-repo
